--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Flask
 Flask-SocketIO
 gunicorn
 eventlet
+pip install --upgrade Flask-SocketIO==4.3.1
+pip install --upgrade python-engineio==3.13.2
+pip install --upgrade python-socketio==4.6.0
