--- a/requirements.txt
+++ b/requirements.txt
@@ -1,279 +1,12 @@
-absl-py==0.15.0
-alembic==1.5.8
-altair==4.2.0
-aniso8601==8.0.0
-annotated-types==0.6.0
-anyio==3.6.2
-appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.3.4
-astroid==2.7.3
-asttokens==2.2.1
-astunparse==1.6.3
-attrs==21.2.0
-audioread==2.1.9
-autopep8==1.5.5
-backcall==0.2.0
-backports.csv==1.0.7
-backports.entry-points-selectable==1.1.1
-banal==1.0.6
-bcrypt==3.2.0
-beautifulsoup4==4.11.2
-bidict==0.23.1
-bleach==6.0.0
-bsn==0.0.2
-cachetools==4.2.4
-certifi==2020.4.5.1
-cffi==1.15.0
-chardet==3.0.4
-charset-normalizer==2.0.12
-click==7.1.1
-cmake==3.29.2
-colorama==0.4.4
-comm==0.1.2
-comtypes==1.4.4
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.5.1
-distlib==0.3.8
-distro==1.9.0
-dlib-binary==19.21.99
-dnspython==2.2.1
-dominate==2.6.0
-ecdsa==0.19.0
-eeglib==0.4.1
-elastic-transport==8.13.0
-elasticsearch==8.13.0
-email-validator==1.1.3
-entrypoints==0.4
-eventlet==0.37.0
-executing==1.2.0
-fastdtw==0.3.4
-fastjsonschema==2.16.3
-ffmpeg==1.4
-filelock==3.16.0
-flake8==4.0.1
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-Cors==5.0.0
-Flask-Login==0.6.3
-Flask-MySQLdb==0.2.0
-flask-ngrok==0.0.25
-Flask-SocketIO==4.3.1
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
-flatbuffers==2.0.7
-fleep==1.0.1
-fonttools==4.32.0
-fqdn==1.5.1
-future==1.0.0
-gast==0.4.0
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-google-search-results==2.4.2
-googlesearch-python==1.2.4
-greenlet==1.1.2
-grpcio==1.34.1
-gunicorn==20.1.0
-h11==0.14.0
-h5py==3.1.0
-heic-to-jpg==0.1.9
-httpcore==1.0.5
-httpx==0.27.0
-idna==2.9
-imageai==3.0.3
-imageio==2.27.0
-importlib-metadata==4.11.3
-importlib-resources==5.7.1
-imutils==0.5.4
-ipykernel==6.21.2
-ipython==8.7.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-isort==5.10.1
-itsdangerous==1.1.0
-jax==0.4.13
-jedi==0.18.2
-Jinja2==2.11.2
-joblib==1.1.0
-jsonpointer==2.3
-jsonschema==4.6.0
-jupyter==1.0.0
-jupyter-console==6.6.2
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-keyboard==0.13.5
-kiwisolver==1.4.2
-lazy-object-proxy==1.7.1
-lazy_loader==0.2
-libclang==14.0.1
-librosa==0.9.1
-llvmlite==0.41.1
-Mako==1.2.1
-Markdown==3.3.7
-MarkupSafe==1.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.6
-mccabe==0.6.1
-mediapipe==0.10.11
-mistune==2.0.5
-ml-dtypes==0.2.0
-mtcnn==0.1.1
-mysqlclient==1.4.6
-nbclassic==0.5.2
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-networkx==3.1
-normality==2.3.3
-notebook==6.5.2
-notebook_shim==0.2.2
-numba==0.58.1
+Flask_Cors==5.0.0
+Flask_Login==0.6.3
+Flask_SocketIO==4.3.1
 numpy==1.24.2
-oauthlib==3.2.0
-ObjectExtractor==0.2.2
-openai==1.35.8
-opencv-contrib-python==4.7.0.72
-opencv-python==4.5.5.64
-opentok==3.9.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pbkdf2==1.3
-pgcsv==0.4
-pickleshare==0.7.5
-Pillow==9.0.1
-pipenv==2023.3.20
-platformdirs==4.3.3
-pooch==1.6.0
-progressbar2==4.2.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==3.20.3
-psutil==5.9.4
-psycopg2-binary==2.9.3
-pure-eval==0.2.2
-pyaes==1.6.1
-pyarrow==16.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.14
-pycodestyle==2.8.0
-pycparser==2.21
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydub==0.25.1
-pyEDFlib==0.1.30
-pyflakes==2.4.0
-pygame==2.6.0
-Pygments==2.13.0
-pyheif==0.7.1
-PyJWT==1.7.1
-pylint==2.10.2
+opencv_contrib_python==4.7.0.72
+opencv_python==4.5.5.64
 pymongo==4.10.1
-pyngrok==4.1.5
-pyparsing==3.0.8
-pypiwin32==223
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-python-dotenv==0.12.0
-python-editor==1.0.4
-python-engineio==3.13.2
-python-jose==3.3.0
-python-json-logger==2.0.7
-python-magic==0.4.27
-python-magic-bin==0.4.14
-python-mnist==0.7
-python-socketio==4.6.0
-python-utils==3.4.5
-python-version==0.0.2
-python-whois==0.9.4
-pyttsx3==2.90
-pytz==2019.3
-PyWavelets==1.4.1
-pywin32==305
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.0.0
-qtconsole==5.4.0
-QtPy==2.3.0
-requests==2.23.0
-requests-oauthlib==1.3.1
-resampy==0.2.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.8
-scikit-image==0.20.0
-scikit-learn==1.1.1
-scipy==1.9.1
-seaborn==0.11.2
-Send2Trash==1.8.0
-simple-websocket==1.0.0
-six==1.14.0
-sklearn==0.0
-smart-open==6.0.0
-sniffio==1.3.0
-sounddevice==0.4.4
-SoundFile==0.10.3.post1
-soupsieve==2.4
-SQLAlchemy==1.4.35
-stack-data==0.6.2
-tabulate==0.8.9
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-terminado==0.17.1
-text-unidecode==1.3
-threadpoolctl==3.1.0
-tifffile==2023.4.12
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.0
-toolz==0.11.2
-torch==1.12.0
-torchvision==0.13.0
-tornado==6.2
-tqdm==4.66.2
-traitlets==5.7.1
-twilio==6.38.1
-typing_extensions==4.11.0
-uri-template==1.2.0
-urllib3==1.25.8
-virtualenv==20.26.4
-virtualenv-clone==0.5.7
-visitor==0.1.3
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
+python_engineio==3.13.2
 Werkzeug==1.0.1
-widgetsnbextension==4.0.5
-windows-curses==2.4.0
-wrapt==1.12.1
-wsproto==1.2.0
-WTForms==2.3.1
-yellowbrick==1.5
-yelpapi==2.5.1
-youtube-dl==2021.12.17
-zipp==3.14.0
+Werkzeug==2.1.1
+Werkzeug==2.1.2
