--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask==2.1.0
 Flask_Cors==5.0.0
 Flask_Login==0.6.3
 Flask_SocketIO==4.3.1
@@ -7,4 +6,6 @@ opencv_contrib_python==4.7.0.72
 opencv_python==4.5.5.64
 pymongo==4.10.1
 python_engineio==3.13.2
-Werkzeug==2.2.2
+python-socketio==4.6.0
+Flask==2.0.3
+Werkzeug==2.0.3
